monitoring/monitoring-v2/efk-stack/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efk-kibana-ingress
  namespace: monitoring-v2
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: kibana.mdlmr.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: efk-kibana-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.mdlmr.fr
